# yolo-inference-cpp

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: YoloV8.hpp
include/backends/: YoloV8MNN.hpp  YoloV8OpenCV.hpp  YoloV8TensorRT.hpp
src/: YoloV8.cpp  main.cpp
src/backends/: YoloV8MNN.cpp  YoloV8OpenCV.cpp  YoloV8TensorRT.cpp
